--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,8 @@
     <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
     <link rel="stylesheet" href="styles.css" />
 </head>
-<body style="margin : 0px; overflow: hidden;">
+<!--<body style="margin : 0px; overflow: hidden;"> -->
+<body>
     <a-scene embedded arjs>
         <a-marker preset="hiro">
             <!--adding .gltf 3D model with animation and url with same domain to avoid CORS issue-->
@@ -26,7 +27,7 @@
                 position="0 2.4 0"
                 text=
                     "color: black; 
-                    align: left; 
+                    align: center; 
                     width: 3; 
                     font: https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/oredo-regular-msdf.json;
                     value: !Make Ls Run Great Again!"
@@ -37,7 +38,7 @@
                 position="0 2 0"
                 text=
                     "color: black; 
-                    align: left; 
+                    align: center; 
                     width: 2; 
                     font: exo2semibold;
                     value: What: Weekly 4 km runs\nWhen: Fridays @ 12 PM \nWhere: Edge office"
