--- a/test2/index.html
+++ b/test2/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- importing a-frame for AR rendering -->
+	<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <!-- importing arjs version without NFT but with marker + location based support -->
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <!-- importing aframe-extra for animating AR content using animation-mixer-->
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+    <!-- importing aframe-look-at-component to tell an entity to face towards another entity or position-->
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <!-- importing html-embed-component to add html elements to a-scene -->
+    <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
 	<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-	<h1 id="test"> before </h1>
+    <a-scene embedded arjs>
+        <a-marker preset="hiro">
+            <!-- adding temperature panel using open weather api and look-at-->
+            <a-entity class="panel" htmlembed="ppu: 256" position="-2 1.5 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
+                <!-- displaying location -->
+                <div id="location"> N/A </div>
+                <!-- displaying celcius temp -->
+                <div id="tempC"> N/A </div>
+            </a-entity>
+    </a-scene>
 	<script src="scripts.js"></script>
 </body>
